--- a/index.html
+++ b/index.html
@@ -966,8 +966,8 @@
 
 
  <!-- footer part start -->
-<footer class="main-footer">
-  <div class="footer-top">
+<footer class="">
+  <div class="footer-top main-footer" style="padding: 20px 0px;">
   <div class="container" style="color: white;">
       <div class="widget-section">
           <div class="row clearfix">
@@ -1025,6 +1025,20 @@
       </div>
   </div>
   
+</div>
+<div class="footer-down" style="padding: 10px 0px;"> 
+  <div class="container">
+    <div class="footer-bottom style-one">
+      <div class="auto-container clearfix">
+          <div class="copyright pull-left">
+              <p>Copyright 2021 <a style="color: black;" href="http://excelitai.com/">Excel IT AI</a>, All Rights Reserved.</p>
+          </div>
+        <ul class="footer-nav pull-right" style="display: flex;">
+      <li><a style="color: black;" href="#">Privacy Policy -</a></li>
+<li><a style="color: black;" href="#">Terms &amp; Conditions</a></li></ul>
+                  </div>
+  </div>
+  </div>
 </div>
 </footer>
 <!-- footer part end -->
